[package]
name = "package_name"
version = "0.0.0"
authors = ["FlareFlo <mail@flareflo.dev>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"
cargo_toml = "0.12.2"

