[package]
name = "package_name"
version = "0.0.1"
authors = ["FlareFlo <mail@flareflo.dev>"]
description = "Creates constants for project metadata"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"
cargo_toml = "0.12.2"

